--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -163,4 +163,14 @@
                    x:Shared="False">
         <!--  https://www.iconfinder.com/icons/370092/add_create_new_plus_icon  -->
         <Geometry>F1 M 253.000,485.755 C 124.662,485.755 20.240,381.338 20.240,253.000 C 20.240,124.661 124.662,20.240 253.000,20.240 C 381.338,20.240 485.760,124.661 485.760,253.000 C 485.760,381.338 381.338,485.755 253.000,485.755 Z M 253.000,0.000 C 113.257,0.000 0.000,113.257 0.000,253.000 C 0.000,392.743 113.257,505.995 253.000,505.995 C 392.743,505.995 506.000,392.743 506.000,253.000 C 506.000,113.257 392.744,0.000 253.000,0.000 Z</Geometry>
-        <Geometry>F1 M 263.120,101.20
+        <Geometry>F1 M 263.120,101.200 L 242.880,101.200 L 242.880,242.880 L 101.872,242.880 L 101.872,263.120 L 242.880,263.120 L 242.880,404.128 L 263.120,404.128 L 263.120,263.120 L 404.800,263.120 L 404.800,242.880 L 263.120,242.880 L 263.120,101.200 Z</Geometry>
+    </GeometryGroup>
+
+    <Geometry x:Key="VectorFavorite"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/309056/heart_like_love_vote_icon  -->
+        F1 M 6.000,0.000 C 5.250,0.000 4.583,0.375 4.167,0.958 C 3.750,0.375 3.083,0.000 2.333,0.000 C 1.042,0.000 0.000,1.042 0.000,2.333 C 0.000,4.167 4.167,7.500 4.167,7.500 C 4.167,7.500 8.333,4.167 8.333,2.333 C 8.333,1.042 7.292,0.000 6.000,0.000 Z
+    </Geometry>
+
+    <Geometry x
