--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -173,4 +173,12 @@
         F1 M 6.000,0.000 C 5.250,0.000 4.583,0.375 4.167,0.958 C 3.750,0.375 3.083,0.000 2.333,0.000 C 1.042,0.000 0.000,1.042 0.000,2.333 C 0.000,4.167 4.167,7.500 4.167,7.500 C 4.167,7.500 8.333,4.167 8.333,2.333 C 8.333,1.042 7.292,0.000 6.000,0.000 Z
     </Geometry>
 
-    <Geometry x
+    <Geometry x:Key="VectorFavoriteNot"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/309057/favorite_heart_like_love_outline_icon  -->
+        F1 M 6.000,0.000 C 5.250,0.000 4.583,0.375 4.167,0.958 C 3.750,0.375 3.083,0.000 2.333,0.000 C 1.042,0.000 0.000,1.042 0.000,2.333 C 0.000,4.167 4.167,7.500 4.167,7.500 C 4.167,7.500 8.333,4.167 8.333,2.333 C 8.333,1.042 7.292,0.000 6.000,0.000 L 6.000,0.000 Z M 6.000,0.833 C 6.833,0.833 7.500,1.500 7.500,2.333 C 7.500,3.167 5.875,5.000 4.167,6.417 C 2.458,4.958 0.833,3.125 0.833,2.333 C 0.833,1.500 1.500,0.833 2.333,0.833 C 3.333,0.833 4.167,2.083 4.167,2.083 C 4.167,2.083 4.958,0.833 6.000,0.833
+    </Geometry>
+
+    <Geometry x:Key="VectorEditor"
+          
