--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -249,4 +249,7 @@
     </Geometry>
 
     <Geometry x:Key="VectorSave"
-              options:F
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  http://www.flaticon.com/free-icon/floppy-disk-digital-data-storage-or-save-interface-symbol_32203  -->
+        F1 M 45.292,49.084 L 13.042,49.084 L 13.042,47.084 L 45.292,47.084 L 45.292,49.084 Z M 45.292,42.334 L 13.042,42.334 L 13.042,40.334 L 45.292,40.334 L 45.292,42.334 Z M 45.292,35.334 L 13.042,35.334 L 13.042,33.334 L 45.292,33.334 L 45.292,35.334 Z M 37.001,5.501 L 42.002,5.501 L 42.002,17.502 L 37.001,17.502 L 37.001,5.501 Z M 48.918,54.084 L 9.418,54.084 L 9.418,29.167 L 48.918,29.167 L 48.918,54.084 Z M 11.167,3.001 L 47.167,3.001 L 47.167,19.834 L 11.167,19.834 L 11.167,3.001 Z M 56.334,0.000 L 2.000,0.000 C 0.896,0
