--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -276,4 +276,17 @@
         <Geometry>F1 M 21.956,6.409 L 0.000,6.409 L 0.000,4.053 L 21.956,4.053 L 21.956,6.409 Z</Geometry>
         <Geometry>F1 M 20.115,10.108 L 1.705,10.108 L 1.705,7.751 L 20.115,7.751 L 20.115,10.108 Z</Geometry>
         <Geometry>F1 M 21.146,13.751 L 3.546,13.751 L 3.546,11.395 L 21.146,11.395 L 21.146,13.751 Z</Geometry>
-        <Geometry>F1 M 20.131,17.666 L 7.097,17.666 L 7.097,15.309 L 20.131,15.3
+        <Geometry>F1 M 20.131,17.666 L 7.097,17.666 L 7.097,15.309 L 20.131,15.309 L 20.131,17.666 Z</Geometry>
+        <Geometry>F1 M 16.286,21.630 L 6.271,21.630 L 6.271,19.274 L 16.286,19.274 L 16.286,21.630 Z</Geometry>
+        <Geometry>F1 M 10.910,25.682 L 5.178,25.682 L 5.178,23.325 L 10.910,23.325 L 10.910,25.682 Z</Geometry>
+    </GeometryGroup>
+
+    <Geometry x:Key="VectorBackArrow"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/211686/arrow_back_icon  -->
+        F1 M 192.000,32.400 L 159.700,0.000 L 0.000,160.000 L 0.000,160.000 L 0.000,160.000 L 159.700,320.000 L 192.000,287.600 L 64.700,160.000 L 192.000,32.400 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorTablet"
+              options:Fre
