--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -289,4 +289,10 @@
     </Geometry>
 
     <Geometry x:Key="VectorTablet"
-              options:Fre
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/186383/tablet_icon  -->
+        F1 M 20.812,23.261 L 3.126,23.261 L 3.197,3.492 L 20.812,3.492 L 20.812,23.261 Z M 12.209,28.548 C 11.479,28.548 10.886,27.954 10.886,27.224 C 10.886,26.495 11.479,25.902 12.209,25.902 C 12.938,25.902 13.531,26.496 13.531,27.224 C 13.531,27.954 12.938,28.548 12.209,28.548 Z M 22.775,0.000 L 16.576,0.000 L 7.495,0.000 L 1.296,0.000 C 0.656,0.000 0.000,0.765 0.000,1.404 L 0.000,28.581 C 0.000,29.222 0.656,30.017 1.296,30.017 L 7.495,30.017 L 16.576,30.017 L 22.775,30.017 C 23.415,30.017 24.142,29.222 24.142,28.581 L 24.142,1.405 C 24.142,0.765 23.415,0.000 22.775,0.000 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorSmart
