--- a/AnyListen/Views/MessageWindow.xaml
+++ b/AnyListen/Views/MessageWindow.xaml
@@ -1,1 +1,10 @@
-﻿<controls:MetroWind
+﻿<controls:MetroWindow x:Class="AnyListen.Views.MessageWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:behaviors="clr-namespace:AnyListen.GUI.Behaviors"
+        Title="Message" Width="300" SizeToContent="Height" GlowBrush="{DynamicResource AccentColorBrush}" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+    <StackPanel Orientation="Vertical" Margin="10">
+        <TextBlock x:Name="MessageTextBlock" TextWrapping="Wrap"/>
+        <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
+            <Button Conte
