--- a/AnyListen/Views/TagEditorWindow.xaml
+++ b/AnyListen/Views/TagEditorWindow.xaml
@@ -2,4 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:converter="clr-namespace:AnyListen.GUI.Co
+        xmlns:converter="clr-namespace:AnyListen.GUI.Converter"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:viewModels="clr-namespace:AnyListen.ViewModels"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        Title="{StaticResource TagEditor}" GlowBrush="{StaticResource AccentColorBrush}" x:Name="BaseWindow" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen" Width="600" Height="507" d:DataContext="{d:DesignInstance viewModels:TagEditorViewModel,IsDesignTimeCreatable=True}" ShowInTaskbar="False">
+    <Window.Resources>
+        <co
