--- a/AnyListen/Views/TagEditorWindow.xaml
+++ b/AnyListen/Views/TagEditorWindow.xaml
@@ -11,4 +11,19 @@
         Title="{StaticResource TagEditor}" GlowBrush="{StaticResource AccentColorBrush}" x:Name="BaseWindow" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen" Width="600" Height="507" d:DataContext="{d:DesignInstance viewModels:TagEditorViewModel,IsDesignTimeCreatable=True}" ShowInTaskbar="False">
     <Window.Resources>
-        <co
+        <converter:StringArrayToStringConverter x:Key="StringArrayToStringConverter"/>
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <TabControl HorizontalContentAlignment="Center">
+            <TabItem Header="{StaticResource General}" controls:ControlsHelper.HeaderFontSize="20">
+                <StackPanel Orientation="Vertical" Margin="5">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="75"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+        
