--- a/AnyListen/Views/TagEditorWindow.xaml
+++ b/AnyListen/Views/TagEditorWindow.xaml
@@ -35,4 +35,16 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{StaticResource Artists}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0"/>
-                        <TextBox Grid.Column="1" Text="{Binding TagFile.Tag.P
+                        <TextBox Grid.Column="1" Text="{Binding TagFile.Tag.Performers,Converter={StaticResource StringArrayToStringConverter}}"/>
+                    </Grid>
+                    <Grid Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="75"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{StaticResource Album}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                        <TextBox Grid.Column="1" Text="{Binding TagFile.Tag.Album}"/>
+                    </Grid>
+                    <DockPanel Margin="0,5,0,0">
+                        <Grid VerticalAlignment="Top">
+                            <Grid.ColumnDefinit
