--- a/AnyListen/Views/TagEditorWindow.xaml
+++ b/AnyListen/Views/TagEditorWindow.xaml
@@ -113,4 +113,16 @@
                                                     </Trigger>
                                                     <Trigger Property="IsMouseOver"
                                  Value="True">
-  
+                                                        <Setter TargetName="ItemBackground"
+                                    Property="Background"
+                                    Value="{DynamicResource AccentColorBrush2}" />
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </xctk:CheckComboBox.ItemContainerStyle>
+                        </xctk:CheckComboBox>
+                    </Grid>
+     
