--- a/AnyListen/Views/TagEditorWindow.xaml
+++ b/AnyListen/Views/TagEditorWindow.xaml
@@ -145,4 +145,14 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="75"/>
                             <ColumnDefinition Width="*"/>
-                        </Grid.Column
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{StaticResource Copyright}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                        <TextBox Grid.Column="1" Text="{Binding TagFile.Tag.Copyright}"/>
+                    </Grid>
+                    <Grid Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="75"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{StaticResource Comment}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                        <TextBox Grid.Column="1" Text="{Binding TagFile.
