--- a/AnyListen/Views/TagEditorWindow.xaml
+++ b/AnyListen/Views/TagEditorWindow.xaml
@@ -155,4 +155,15 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{StaticResource Comment}" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,5,0"/>
-                        <TextBox Grid.Column="1" Text="{Binding TagFile.
+                        <TextBox Grid.Column="1" Text="{Binding TagFile.Tag.Comment}" Height="100" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.VerticalScrollBarVisibility="Visible"/>
+                    </Grid>
+                    <Grid Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="75"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right"  Margin="0,0,5,0">
+                            <TextBlock Text="{StaticResource Track}"/>
+                            <TextBlock Text=" #"/>
+                        </StackPanel>
+                        <Stack
