--- a/AnyListen/Views/Tools/LanguageCreatorWindow.xaml
+++ b/AnyListen/Views/Tools/LanguageCreatorWindow.xaml
@@ -1,4 +1,19 @@
 ﻿<Window x:Class="AnyListen.Views.Tools.LanguageCreatorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Language Creator" Height="500" MinHeight="500" Width="900" MinWidth="900" x:Name="Window" DataContext="{Binding ElementName=Window}" WindowStartupLocation="CenterScreen" Icon="/
+        Title="Language Creator" Height="500" MinHeight="500" Width="900" MinWidth="900" x:Name="Window" DataContext="{Binding ElementName=Window}" WindowStartupLocation="CenterScreen" Icon="/AnyListen;component/Resources/App/LanguageCreator.png">
+    <Window.InputBindings>
+        <KeyBinding Key="S" Modifiers="Control" Command="{Binding SaveDocument}"/>
+        <KeyBinding Key="S" Modifiers="Control+Shift" Command="{Binding SaveDocumentAs}"/>
+        <KeyBinding Key="O" Modifiers="Control" Command="{Binding OpenDocument}"/>
+        <KeyBinding Key="N" Modifiers="Control" Command="{Binding NewDocument}"/>
+    </Window.InputBindings>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Menu>
+            <MenuItem Header="{StaticResource File}">
+                <Menu
