--- a/AnyListen/Views/Tools/LanguageCreatorWindow.xaml
+++ b/AnyListen/Views/Tools/LanguageCreatorWindow.xaml
@@ -61,4 +61,10 @@
             </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="{StaticResource Key}" Binding="{Binding Key}" IsReadOnly="True" Width="180" x:Name="DataGridTextColumn"/>
-                <DataGridText
+                <DataGridTextColumn Header="{StaticResource EnglishTranslation}" Binding="{Binding EnglishWord}" IsReadOnly="True" Width="250" ElementStyle="{StaticResource TextColumnStyle}"/>
+                <DataGridTextColumn Header="{StaticResource GermanTranslation}" Binding="{Binding GermanWord}" IsReadOnly="True" Width="250" ElementStyle="{StaticResource TextColumnStyle}"/>
+                <DataGridTextColumn Header="{StaticResource Translation}" Binding="{Binding Value,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+    </Grid>
+</Window>
