--- a/AnyListen/Views/UserControls/AboutView.xaml
+++ b/AnyListen/Views/UserControls/AboutView.xaml
@@ -1,2 +1,13 @@
 ﻿<UserControl x:Class="AnyListen.Views.UserControls.AboutView"
-             xmlns="http://schemas.micro
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:behaviors="clr-namespace:AnyListen.GUI.Behaviors"
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="800" Background="Transparent" x:Name="AboutControl">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <Style TargetType="TextBlock" x:Key="TextBlockHeader">
+                <Setter Property="FontWeight" Value="Bold"/>
