--- a/AnyListen/Views/UserControls/AboutView.xaml
+++ b/AnyListen/Views/UserControls/AboutView.xaml
@@ -11,3 +11,15 @@
         <ResourceDictionary>
             <Style TargetType="TextBlock" x:Key="TextBlockHeader">
                 <Setter Property="FontWeight" Value="Bold"/>
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="Foreground" Value="{StaticResource AccentColorBrush}"/>
+            </Style>
+            <Style TargetType="Hyperlink" x:Key="HyperlinkStyle">
+                <Setter Property="TextBlock.TextDecorations" Value="{x:Null}"/>
+                <Setter Property="Foreground" Value="{StaticResource NormalColorBrush}"/>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Trigger.EnterActions>
+                            <BeginStoryboard>
+                                <Storyboard>
+                   
