--- a/AnyListen/Views/UserControls/AboutView.xaml
+++ b/AnyListen/Views/UserControls/AboutView.xaml
@@ -48,4 +48,14 @@
                 <TextBlock Text="AnyListen" FontSize="24" FontFamily="Segoe UI Light"/>
                 <StackPanel Orientation="Horizontal"  Margin="0,5,0,0">
                     <TextBlock Text="Version: "/>
-                  
+                    <TextBlock Text="{Binding ElementName=AboutControl,Path=CurrentVersion}" FontWeight="Bold"/>
+                    <TextBlock Text="Beta" Foreground="{DynamicResource AccentColorBrush}" FontWeight="Bold" Margin="5,0,0,0"/>
+                </StackPanel>
+                <TextBlock Text="{DynamicResource AboutCopyright}" Margin="0,10,0,0"/>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                    <Button Click="ButtonGitHub_Click">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                                <Setter Property="Template">
+          
